plugins {
    id 'java-library'
    id 'kotlin'
}
apply plugin: 'com.diffplug.spotless'

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

dependencies {
 
    api 'androidx.annotation:annotation:1.8.2'
    // api 'com.google.guava:guava:33.3.0-jre'
	api 'com.google.guava:guava:33.4.8-jre'
    api 'com.google.code.gson:gson:2.11.0'
    api 'commons-io:commons-io:2.16.1'
    api 'net.lingala.zip4j:zip4j:2.11.5'
    compileOnly project(path: ':android-stubs')
	implementation 'org.jetbrains.kotlin:kotlin-stdlib:2.3.0'
}

spotless {
		java {
			target "**/*.java"
			googleJavaFormat()
			}
}
tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
    kotlinOptions {
        jvmTarget = '17'
    }
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += [
        "--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
        "--add-exports=jdk.compiler/sun.nio.ch=ALL-UNNAMED"
    ]
}